[package]
name = "terminus"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations.
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary

# [lints.rust]
# unsafe_code = "forbid"

# [lints.clippy]
# enum_glob_use = "deny"
# pedantic = "deny"
# nursery = "deny"
# unwrap_used = "deny"


[dependencies]
termion = "3.0.0"